# shopify-dev-intern-challenge

./: .replit  README.md  db.sqlite3  pyproject.toml  requirements.txt
iteminfo/: admin.py  apps.py  forms.py  models.py  views.py
iteminfo/migrations/: 0001_initial.py  0002_auto_20220514_1501.py
templates/iteminfo/: assignment_confirm_delete.html  assignment_detail.html  assignment_form.html  assignment_form_update.html  assignment_list.html  base.html  item_confirm_delete.html  item_detail.html  item_form.html  item_form_update.html  item_list.html  item_refuse_delete.html  warehouse_confirm_delete.html  warehouse_detail.html  warehouse_form.html  warehouse_form_update.html  warehouse_list.html  warehouse_refuse_delete.html
tracking/: settings.py  urls.py
