[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["FlyingNightBird <<>>"]
description = ""
name = "repl_python3_shopify-dev-intern-challenge"
version = "0.1.0"
[tool.poetry.dependencies]
Django = "^3.2.5"
python = "^3.8"
[tool.poetry.dev-dependencies]
